Added swagger-ui-alone
